fix buttons not squishing horizontally good

--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -2,6 +2,7 @@
 %shared-button {
   @include font-style;
 
+  flex-shrink: 1;
   justify-content: center;
   color: $button-font-color;
   border: 1px solid transparent;
